--- a/IoTServicesCode/webapp_frontend/app/web/src/app/app.component.css
+++ b/IoTServicesCode/webapp_frontend/app/web/src/app/app.component.css
@@ -9,8 +9,23 @@
 .medidas{
     border: 0px;
 }
+tr:hover {
+   
+ background-color: rgba(255,255,255,0.3);
+}
+td:hover:before {
+            content: "";
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: -9999px;
+            bottom: -9999px;
+            background-color: rgba(255,255,255,0.2);
+            z-index: -1;
+        }
 th{
-    background-color: palevioletred!important;
+    background-color: #55608f!important;
+    color: white;
 }
 .fetch{
     background-color: black;
