--- a/IoTServicesCode/webapp_frontend/app/web/src/styles.css
+++ b/IoTServicesCode/webapp_frontend/app/web/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+html{
+    background: linear-gradient(45deg, #000000, #ffffff);
+}
