query api update

--- a/IoTServicesCode/webapp_frontend/app/web/src/app/app.component.css
+++ b/IoTServicesCode/webapp_frontend/app/web/src/app/app.component.css
@@ -4,13 +4,21 @@ html{
 .table1{
     margin-left: auto;
     margin-right: auto;
-    margin: 0 auto;  
 }
 .table,th,td{
     border: 1px solid black;
 }
 .medidas{
     border: 0px;
+}
+.container{
+    margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+    
 }
 th{
     background-color: #55608f!important;
