web update build

--- a/IoTServicesCode/webapp_frontend/app/web/src/app/app.component.html
+++ b/IoTServicesCode/webapp_frontend/app/web/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="showDevices;else other_content">
+<!-- <div *ngIf="showDevices;else other_content">
   <div class="container">
     <table class="table1">
 
@@ -100,4 +100,5 @@
   </table>
 
 
-</ng-template>
+</ng-template> -->
+Hola
