--- a/IoTServicesCode/webapp_frontend/app/web/src/app/app.component.html
+++ b/IoTServicesCode/webapp_frontend/app/web/src/app/app.component.html
@@ -54,7 +54,7 @@
     <input [(ngModel)]="startDate" type="date" id="start" name="start" value="2000-01-08">
     End date:
     <input [(ngModel)]="endDate" type="date" id="end" name="end" value="3000-01-08">
-    Temperature:
+    Data type:
     <select name="measurements" id="filtering" [(ngModel)]=typeMeasurements>
       <option value="temp">Temperature</option>
       <option value="hum">Humidity</option>
@@ -101,4 +101,3 @@
 
 
 </ng-template>
-Hola
